# python_laba_2

./: README.md  pyproject.toml
src/: copied.py  enums.py
src/services/: base.py  windows_console.py
tests/: conftest.py  tests.py
